<resources>
    <string name="app_name">SKT-T1</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="locate">Locate</string>
    <string name="last_seen_location"><em>Last location:</em> %1$s</string>
    <string name="last_seen_time"><em>Time:</em> %1$s</string>
    <string name="nav_label_map">Map</string>
    <string name="map_button_label_buzz">BUZZ</string>
    <string name="map_button_label_sit">SIT</string>
    <string name="activity_date_time_info">%1$s at %2$s</string>
    <string name="nav_label_settings">Settings</string>
    <string name="nav_label_home">Home</string>
    <string name="settings_time_interval">Time Interval</string>
    <string name="settings_time_interval_description">Set how often the device automatically checks Bluetooth connection</string>
    <string name="settings_alarm_sound">Alarm sound</string>
    <string name="settings_alarm_sound_description">Set the sound the device plays when alerted</string>
    <string name="settings_phone_alarm_sound_description">Set the sound this smartphone plays when alerted</string>
    <string name="settings_phone_alarm_sound">Find phone alarm sound</string>
    <string name="action_bar_notification">Notification</string>
    <string name="action_bar_profile">Profile</string>
    <string name="content_description_user_profile">User Profile</string>
    <string name="content_description_notification">Notification</string>
    <string name="app_description">LOCATE EVERYTHING</string>
    <string name="bluetooth_off_message">Bluetooth is turned off. Turn on to bluetooth to scan devices.</string>
    <string name="bluetooth_scan_message">Searching for compatible devices.</string>
    <string name="bluetooth_finish_empty_message">No devices were found</string>
    <string name="bluetooth_finish_message">Scan complete!</string>
    <string name="bluetooth_not_supported_message">Bluetooth is not supported by the device</string>
    <string name="google_maps_key">AIzaSyB6LNJ14Z9RiqrjV60Y4IR2wJHhOyNfoac</string>
    <string name="fab_add_tag">Add tag</string>
    <string name="add_tag_instruction">Please select the <b>SKT-T1</b> from the list of devices on you smartphone.</string>
    <string name="add_tag_instruction_2">Enter a label for the new SKT-T1</string>
    <string name="skt_t1_logo">SKT-T1 logo</string>
    <string name="location_error_message">Location permission is required.</string>
    <string name="time_recorded">Time Recorded: %1$s</string>
    <string name="settings_username">%1$s</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="settings_nickname"><b>Nickname:</b> %1$s</string>
    <string name="settings_number_devices"><b>Devices:</b> %1$s</string>
    <string name="settings_number_inactive_devices"><b>Inactive Devices:</b> %1$s</string>
    <string name="find_my_phone_alarm">Find my Phone Alarm</string>
    <string name="set_the_sound_this_smartphone_plays_when_alerted">Set the sound this smartphone plays when alerted</string>
    <string name="settings_find_my_phone_alarm">%1$s</string>
    <string name="activity_connected">A device has been connected.</string>
    <string name="activity_connection">%1$s has been connected.</string>
    <string name="activity_disconnected">%1$s has been disconnected.</string>
    <string name="activity_alerted">Your phone has been alerted by Tag: %1$s</string>
    <string name="activity_sit_alerted">Your device %1$s on sit has been moved</string>
    <string name="slider_message">Thank you for downloading the SKT-T1 application.</string>
    <string name="slider_message2">This application will help you locate objects where you placed the keychain on.</string>
    <string name="edit_tag_update">update</string>
    <string name="edit_tag_label">Enter Tag label</string>
    <string name="edit_tag_menu">Select from the menu your preferred device alarm sound</string>
    <string name="edit_tag_name">Edit tag name</string>
    <string name="edit_tv_tag_name">Key</string>
    <string name="edit_tag_high_volume">High</string>
    <string name="edit_tag_medium_volume">Medium</string>
    <string name="edit_tag_low_volume">Low</string>
</resources>
