<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/xsSpacing"
    tools:context=".data.fragments.SettingsFragment">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:theme="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_time_interval">
        </TextView>
        <TextView
            android:theme="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_time_interval_description">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:theme="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_alarm_sound">
        </TextView>
        <TextView
            android:theme="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_alarm_sound_description">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:theme="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_phone_alarm_sound">
        </TextView>
        <TextView
            android:theme="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_phone_alarm_sound_description">
        </TextView>
    </LinearLayout>
</LinearLayout>